# RubytechTest2_Implementation_of_functions_and_classes

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
logger/: logger.py
tasks/: task_a.py  task_b.py  task_c.py  task_d.py  task_e.py  task_f.py
