[tool.poetry]
name = "rubytechtest2 implementation of functions and classes"
version = "0.1.0"
description = ""
authors = ["Alexey <97658978+SAtbish@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
aiohttp = "^3.9.5"
nest-asyncio = "^1.6.0"

[tool.poetry.group.linters.dependencies]
autoflake = "^2.3.1"
isort = "^5.13.2"
black = "^24.4.0"
docformatter = "^1.7.5"
bandit = "^1.7.8"
flake8 = "^7.0.0"
pylint = "^3.1.0"
ruff = "^0.4.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
